// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`exclude asset exclude all 1`] = `Array []`;

exports[`exclude asset exclude some 1`] = `
Array [
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 2598,
              "size": 2598,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 973,
              "size": 973,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 1625,
                "ok": true,
                "percent": 167.0092497430627,
              },
              "size": Object {
                "absolute": 1625,
                "ok": false,
                "percent": 167.0092497430627,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 1,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of assets is 1.59 kb (167.01%). It's over the 0.00 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 12366,
              "size": 12956,
            },
            "before": Object {
              "asyncSize": 134,
              "initialSize": 8958,
              "size": 9092,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 456,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "initialSize": Object {
                "absolute": 3408,
                "ok": true,
                "percent": 38.04420629604823,
              },
              "size": Object {
                "absolute": 3864,
                "ok": false,
                "percent": 42.498900131984165,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 1,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of assets is 3.77 kb (42.50%). It's over the 0.00 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSizeDiff global 1`] = `
Array [
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 13061,
              "size": 13651,
            },
            "before": Object {
              "asyncSize": 134,
              "initialSize": 8958,
              "size": 9092,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 456,
                "ok": false,
                "percent": 340.2985074626866,
              },
              "initialSize": Object {
                "absolute": 4103,
                "ok": true,
                "percent": 45.80263451663318,
              },
              "size": Object {
                "absolute": 4559,
                "ok": true,
                "percent": 50.142982842058956,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": 100,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of async assets is 0.45 kb (340.30%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSizeDiff not match - global 1`] = `Array []`;

exports[`maxAsyncSizeDiff not match - override global 1`] = `Array []`;

exports[`maxAsyncSizeDiff override global 1`] = `
Array [
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 13061,
              "size": 13651,
            },
            "before": Object {
              "asyncSize": 134,
              "initialSize": 8958,
              "size": 9092,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 456,
                "ok": false,
                "percent": 340.2985074626866,
              },
              "initialSize": Object {
                "absolute": 4103,
                "ok": true,
                "percent": 45.80263451663318,
              },
              "size": Object {
                "absolute": 4559,
                "ok": true,
                "percent": 50.142982842058956,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": 100,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of async assets is 0.45 kb (340.30%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxAsyncSizeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 1200,
              "initialSize": 31277,
              "size": 32477,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12704,
              "size": 12846,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 1058,
                "ok": false,
                "percent": 745.0704225352113,
              },
              "initialSize": Object {
                "absolute": 18573,
                "ok": true,
                "percent": 146.19804785894206,
              },
              "size": Object {
                "absolute": 19631,
                "ok": true,
                "percent": 152.81799782033318,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": 100,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of async assets is 1.03 kb (745.07%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialSizeDiff global 1`] = `
Array [
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 3293,
              "size": 3293,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 973,
              "size": 973,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 2320,
                "ok": false,
                "percent": 238.4378211716341,
              },
              "size": Object {
                "absolute": 2320,
                "ok": true,
                "percent": 238.4378211716341,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of initial assets is 2.27 kb (238.44%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 13061,
              "size": 13651,
            },
            "before": Object {
              "asyncSize": 134,
              "initialSize": 8958,
              "size": 9092,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 456,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "initialSize": Object {
                "absolute": 4103,
                "ok": false,
                "percent": 45.80263451663318,
              },
              "size": Object {
                "absolute": 4559,
                "ok": true,
                "percent": 50.142982842058956,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of initial assets is 4.01 kb (45.80%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialSizeDiff not match - global 1`] = `Array []`;

exports[`maxInitialSizeDiff not match - override global 1`] = `Array []`;

exports[`maxInitialSizeDiff override global 1`] = `
Array [
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 3293,
              "size": 3293,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 973,
              "size": 973,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 2320,
                "ok": false,
                "percent": 238.4378211716341,
              },
              "size": Object {
                "absolute": 2320,
                "ok": true,
                "percent": 238.4378211716341,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of initial assets is 2.27 kb (238.44%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 13061,
              "size": 13651,
            },
            "before": Object {
              "asyncSize": 134,
              "initialSize": 8958,
              "size": 9092,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 456,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "initialSize": Object {
                "absolute": 4103,
                "ok": false,
                "percent": 45.80263451663318,
              },
              "size": Object {
                "absolute": 4559,
                "ok": true,
                "percent": 50.142982842058956,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of initial assets is 4.01 kb (45.80%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxInitialSizeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 12757,
              "size": 12757,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 1612,
              "size": 1612,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 11145,
                "ok": false,
                "percent": 691.3771712158809,
              },
              "size": Object {
                "absolute": 11145,
                "ok": true,
                "percent": 691.3771712158809,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of initial assets is 10.88 kb (691.38%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 1200,
              "initialSize": 31277,
              "size": 32477,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12704,
              "size": 12846,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 1058,
                "ok": true,
                "percent": 745.0704225352113,
              },
              "initialSize": Object {
                "absolute": 18573,
                "ok": false,
                "percent": 146.19804785894206,
              },
              "size": Object {
                "absolute": 19631,
                "ok": true,
                "percent": 152.81799782033318,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": 100,
              "maxSizeDiff": Infinity,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of initial assets is 18.14 kb (146.20%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSizeDiff global 1`] = `
Array [
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 3293,
              "size": 3293,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 973,
              "size": 973,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 2320,
                "ok": true,
                "percent": 238.4378211716341,
              },
              "size": Object {
                "absolute": 2320,
                "ok": false,
                "percent": 238.4378211716341,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of assets is 2.27 kb (238.44%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 13061,
              "size": 13651,
            },
            "before": Object {
              "asyncSize": 134,
              "initialSize": 8958,
              "size": 9092,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 456,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "initialSize": Object {
                "absolute": 4103,
                "ok": true,
                "percent": 45.80263451663318,
              },
              "size": Object {
                "absolute": 4559,
                "ok": false,
                "percent": 50.142982842058956,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of assets is 4.45 kb (50.14%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSizeDiff not match - global 1`] = `Array []`;

exports[`maxSizeDiff not match - override global 1`] = `Array []`;

exports[`maxSizeDiff override global 1`] = `
Array [
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 3293,
              "size": 3293,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 973,
              "size": 973,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 2320,
                "ok": true,
                "percent": 238.4378211716341,
              },
              "size": Object {
                "absolute": 2320,
                "ok": false,
                "percent": 238.4378211716341,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of assets is 2.27 kb (238.44%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 590,
              "initialSize": 13061,
              "size": 13651,
            },
            "before": Object {
              "asyncSize": 134,
              "initialSize": 8958,
              "size": 9092,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 456,
                "ok": true,
                "percent": 340.2985074626866,
              },
              "initialSize": Object {
                "absolute": 4103,
                "ok": true,
                "percent": 45.80263451663318,
              },
              "size": Object {
                "absolute": 4559,
                "ok": false,
                "percent": 50.142982842058956,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": true,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of assets is 4.45 kb (50.14%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;

exports[`maxSizeDiff with useCompressedSize = false 1`] = `
Array [
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 0,
              "initialSize": 12757,
              "size": 12757,
            },
            "before": Object {
              "asyncSize": 0,
              "initialSize": 1612,
              "size": 1612,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 0,
                "ok": true,
                "percent": 0,
              },
              "initialSize": Object {
                "absolute": 11145,
                "ok": true,
                "percent": 691.3771712158809,
              },
              "size": Object {
                "absolute": 11145,
                "ok": false,
                "percent": 691.3771712158809,
              },
            },
            "entry": "one",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"one\\": Download size diff of assets is 10.88 kb (691.38%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "one",
        "type": "entry",
      },
    ],
  },
  Object {
    "compilation": "6531875fbf1c01886a20",
    "details": Array [
      Object {
        "payload": Object {
          "context": Object {
            "after": Object {
              "asyncSize": 1200,
              "initialSize": 31277,
              "size": 32477,
            },
            "before": Object {
              "asyncSize": 142,
              "initialSize": 12704,
              "size": 12846,
            },
            "compilation": "6531875fbf1c01886a20",
            "diff": Object {
              "asyncSize": Object {
                "absolute": 1058,
                "ok": true,
                "percent": 745.0704225352113,
              },
              "initialSize": Object {
                "absolute": 18573,
                "ok": true,
                "percent": 146.19804785894206,
              },
              "size": Object {
                "absolute": 19631,
                "ok": false,
                "percent": 152.81799782033318,
              },
            },
            "entry": "two",
            "rule": Object {
              "maxAsyncSizeDiff": Infinity,
              "maxInitialSizeDiff": Infinity,
              "maxSizeDiff": 100,
            },
            "useCompressedSize": false,
          },
        },
        "query": "
            $input: resolveInputFile();
            {
              entry: #.entry.resolveEntrypoint(#.compilation),
              useCompressedSize: #.useCompressedSize,
              before: #.before,
              after: #.after,
              diff: #.diff,
              rule: #.rule,
            }
            ",
        "type": "discovery",
      },
    ],
    "filename": "input.json",
    "message": "Entry \\"two\\": Download size diff of assets is 19.17 kb (152.82%). It's over the 0.10 kb limit",
    "related": Array [
      Object {
        "id": "two",
        "type": "entry",
      },
    ],
  },
]
`;
